experimenting with basic templates

--- a/site/layouts/device/single.html
+++ b/site/layouts/device/single.html
@@ -1,4 +1,11 @@
 <!-- Standard template for a single device -->
+There should be content here
+
+{{ .Params.manufacturer }}
+{{ .Title }}
+
+^ Title block
+
 {{ define "main" }}
 <section id="main">
   <h1 id="title">{{ .Title }}</h1>
