--- a/site/themes/synthbase/layouts/partials/header.html
+++ b/site/themes/synthbase/layouts/partials/header.html
@@ -4,3 +4,9 @@
     <title>{{ .Title }}</title>
 </head>
 <body>
+    <nav>
+        <a href="/">Home</a>
+        <a href="/device/">Devices</a>
+        <a href="/manufacturer/">Manufacturers</a>
+        <a href="/about/">About</a>
+    </nav>
