Basic Manufacturer Archetype

--- a/site/themes/synthbase/layouts/partials/header.html
+++ b/site/themes/synthbase/layouts/partials/header.html
@@ -7,7 +7,7 @@
     <nav>
         <a href="/">Home</a>
         <a href="/device/">Devices</a>
-        <a href="/manufacturer/">Manufacturers</a>
+        <a href="/manufacturers/">Manufacturers</a>
         <!-- This should always include the About page -->
         <!-- But "About" only appears on the homepage... -->
         {{ range .Data.Pages }}
